%% sybil Version History

\name{NEWS}
\title{sybil News}
\encoding{UTF-8}

\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in version 1.3.1 2015-08-06}{
  \itemize{
  	\item \code{rmReact} error, if resulting model had only one gene left, corrected.
    \item \code{deadEndMetabolite()} could miss deadEndMetabolites if reactions differ in stoichiometry e.g. 1 and 2.
  }
}

\section{Changes in version 1.3.1 2015-08-06}{
  \itemize{
    \item \code{readTSVmod} had a mistake in the documentation about singletons.
  }
}

% ---------------------------------------------------------------------------- %

\section{Changes in version 1.3.0 2015-06-17}{
  \itemize{
    \item changed maintainer
    \item \code{.parseBoolean} now gives a warning, but handles empty gpr in a intuitive way.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.10 2015-03-30}{
  \itemize{
    \item \code{findExchangeReact} can now deal with real big matrices (>30.000 columns).
    \item additional example for readProb and writeProb.
    \item modified \code{multiDel} to not use \code{require}
    \item \code{doubleFluxDel} had a bug if \code{react1} or \code{react2} contained duplicated entries.
    \item documentation of \code{hasEffect} in \code{optsol_genedel} is now clearer.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.9 2014-11-19}{
  \itemize{
    \item fixed a bug in class \code{modelorg} and function \code{addReact} when
          the modelorg object is initially empty
  }
}


% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.8 2014-08-29}{
  \itemize{
    \item for method \code{optimizeProb} of class \code{modelorg}: if arguments
          \code{lb}, \code{ub} or \code{obj_coef} are of length one, they are used